LESSON-8 feat. add change light or dark mode

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://surinvladyslav.github.io/onix-react-test-task/",
-  "name": "onix-react-test-task",
+  "homepage": "https://surinvladyslav.github.io/onix-react/",
+  "name": "onix-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
